--- a/redis/redis@1.service
+++ b/redis/redis@1.service
@@ -26,7 +26,7 @@ EnvironmentFile=/etc/environment
 ## Directives with "=-" are allowed to fail without consequence
 ExecStartPre=-/usr/bin/docker kill redis.1
 ExecStartPre=-/usr/bin/docker rm redis.1
-ExecStartPre=/usr/bin/docker pull redis:aphine
+ExecStartPre=/usr/bin/docker pull redis:alpine
 ExecStart=/opt/bin/weave run -p 6379:6379 \
                             -v /data/redis:/data \
                             -v /etc/redis/redis-master.conf:/etc/redis/redis.conf \
