--- a/redis/redis@1.service
+++ b/redis/redis@1.service
@@ -26,10 +26,10 @@ EnvironmentFile=/etc/environment
 ## Directives with "=-" are allowed to fail without consequence
 ExecStartPre=-/usr/bin/docker kill redis.1
 ExecStartPre=-/usr/bin/docker rm redis.1
-ExecStartPre=/usr/bin/docker pull redis
+ExecStartPre=/usr/bin/docker pull redis:alpine
 ExecStart=/opt/bin/weave run -p 6379:6379 \
                             -v /data/redis:/data \
-                            --name redis.1 redis redis-server /etc/redis/redis.conf
+                            --name redis.1 redis:alpine redis-server /etc/redis/redis.conf
 
 # Stop
 ExecStop=/usr/bin/docker stop redis.1
